Add build files

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Description" content="A example online shop created with Vue.js and hosted on Netlify, 
+    Author: Kibily Notts,
+    It is just a test">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>vue-online-store</title>
